@@ -26,16 +26,17 @@ public class DataSourceFactory {
         switch (credentials.getDbType()) {
         case POSTGRESQL:
         	dataSource.setDriverClassName("org.postgresql.Driver");
-            break;
+        	dataSource.setUrl("jdbc:postgresql://" + credentials.getHost() + "/" + credentials.getDatabase()
+        			/*+ "?loglevel=2"*/);
+        	break;
         case MYSQL:
         	dataSource.setDriverClassName("com.mysql.jdbc.Driver");
+        	dataSource.setUrl("jdbc:mysql://" + credentials.getHost() + "/" + credentials.getDatabase());
             break;
         default:
             throw new OsmosisRuntimeException("Unknown database type " + credentials.getDbType() + ".");
         }
         
-        dataSource.setUrl("jdbc:postgresql://" + credentials.getHost() + "/" + credentials.getDatabase()
-        		/*+ "?loglevel=2"*/);
         dataSource.setUsername(credentials.getUser());
         dataSource.setPassword(credentials.getPassword());
         
